@startuml
hide circle
skinparam classAttributeIconSize 0

together {
    class Storage
    class File
    class ModuleList
}
Storage"1" --> ModuleList
Storage"1  " --> File
Storage : +getStorage(filePath:File):Storage
Storage : +loadModulesFromFile():ArrayList<Modules>
Storage : +saveModuleFile(modules:ModuleList):void
Storage : -loadFromJson():ArraryList<Module>
Storage : -saveToJson(jsonFile:File, modules:ArraryList<Module>):void
Storage : -Storage(filePath:File):void

ModuleList : -modules:ArrayList<Module>
ModuleList : -DEFAULT_INDEX:integer

@enduml